@@ -17,23 +17,23 @@ public class AlertNotifyService {
     @Autowired private WorkflowsProducer workflowsProducer;
     @Autowired private ActionExecutorService actionExecutorService;
 
-    private Map<UUID, Step> getSteps(Workflow workflow) {
+    private Map<String, Step> getSteps(Workflow workflow) {
         return Objects.requireNonNull(workflow.getPlaybook()).getSteps().stream()
-            .collect(Collectors.toMap(Step::getId, step -> step));
+            .collect(Collectors.toMap(Step::getName, step -> step));
     }
 
     public void executeWorkflow(Workflow workflow) {
-        UUID nextStepId = workflow.getNextStep();
-        Map<UUID, Step> steps = getSteps(workflow);
-        Step currentStep = steps.get(nextStepId);
+        String nextStepName = workflow.getNextStep();
+        Map<String, Step> steps = getSteps(workflow);
+        Step currentStep = steps.get(nextStepName);
         if (currentStep == null) {
             return;
         }
         List<ConditionalNext> nextSteps = currentStep.getNext();
         String[] action = currentStep.getAction() == null ? null : currentStep.getAction().split(" +");
-        System.out.println("Execute dummy action: " + Arrays.toString(action));
+        System.out.println("Execute action: " + Arrays.toString(action));
 
-        executeAction(action, workflow.getAlarm());
+        actionExecutorService.execute(action, workflow.getAlarm());
 
         if (nextSteps.isEmpty()) {
             System.out.println("Workflow " + workflow.getId() + " ended");
@@ -41,24 +41,14 @@ public class AlertNotifyService {
         }
 
         // no conditions for human action
-        Step nextStep = steps.get(nextSteps.get(0).getNext());
-        workflow.setNextStep(nextStep.getId());
+        Step nextStep = steps.get(nextSteps.getFirst().getName());
+        workflow.setNextStep(nextStep.getName());
 
         if (Step.TypeEnum.AUTO.equals(nextStep.getType())) {
             workflowsProducer.send("workflow.auto", workflow);
 
         } else if (Step.TypeEnum.HUMAN.equals(nextStep.getType())) {
             workflowsProducer.send("workflow.human", workflow);
-        }
-    }
-
-    public void executeAction(String[] action, Alarm alarm) {
-        if (action == null || action.length == 0) {
-            return;
-        }
-        switch (action[0]) {
-            case "notify" -> actionExecutorService.notify(action, alarm);
-            default -> {}
         }
     }
 
